--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,7 +32,7 @@ header {
 }
 main {
   grid-area: main;
-  padding: 1rem;
+  /* /padding: 1rem; */
 }
 footer {
   grid-area: footer;
@@ -41,7 +41,7 @@ footer {
 }
 /*common*/
 h1{
-  font-size: 1.8rem;
+  font-size: 3rem;
   padding: 1rem 0;
 }
 h2{
@@ -84,6 +84,7 @@ button:hover{
 }
 button.primary{
   background-color: #f0c040;
+  margin-right: 10%;
 }
 button.block{
   width: 100%;
@@ -98,8 +99,9 @@ padding: 1rem ;
 }
 a.brand{
   color: #ffffff;
-  font-size: 3rem;
-  padding: 1rem;
+  font-size: 4rem;
+  padding: 3rem;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .badge {
   background-color: #f02020;
@@ -120,6 +122,11 @@ a.brand{
 }
 .row.top{
   align-items: flex-start;
+}
+.row h1{
+  font-size: 30px;
+  margin-left: 10%;
+  
 }
 .col-1{
   flex: 1 1 25rem;
@@ -149,7 +156,7 @@ img.large{
 /*Card*/
 .card{
   border: 0.1rem;
-  background-color: #f8f8f8;
+  background-color: white;
   border-radius: 0.5rem;
   margin: 1rem;
 }
@@ -242,21 +249,34 @@ img.large{
   color: #f08000;
 }
 /* Table */
+
+
 .table {
-  width: 100%;
+  width: 80%;
   border-collapse: collapse;
+  margin-left: 10%;
+  margin-bottom: 2%;
 }
+.orderlist.h1{
+  text-align: center;
+} 
+
 .table tbody tr:nth-of-type(odd) {
   background-color: #f4f4f4;
 }
 .table td,
 .table th {
-  text-align: left;
+  text-align: center;
   border: 0.1rem solid #e4e4e4;
   padding: 0.5rem;
 }
+.table th{
+  background-color: rgb(174, 214, 241 );
+  font-size: 2rem;
+  }
 .table button {
   margin: 0 0.2rem;
+  background-color: #c4c4c4;
 }
 
 /* Dashboard */
@@ -286,45 +306,10 @@ img.large{
 .summary-title.color3 {
   background-color: #e0e0f0;
 }
-/* Pagination */
-.pagination a {
-  padding: 1rem;
-  margin: 0.5rem;
-  border-radius: 0.5rem;
-  border: 0.1rem #a4a4a4 solid;
-  font-size: 1.6rem;
-  font-family: Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.sales h2{
+  text-align: center;
+  font-size: 2.5rem;
 }
-.pagination a.active {
-  font-weight: bold;
-}
-
-/* Map */
-.full-container {
-  margin: -1rem;
-  height: calc(100% + 2rem);
-}
-.map-input-box {
-  box-sizing: border-box;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: 0.5rem auto;
-  width: 25rem;
-  height: 4rem;
-  display: flex;
-}
-.map-input-box input {
-  border-radius: 1rem 0 0 1rem;
-  border-right: 0;
-}
-.map-input-box button {
-  border-radius: 0 1rem 1rem 0;
-  border-left: 0;
-}
-
 
 /* Chatbox */
 .chatbox {
@@ -400,3 +385,96 @@ img.large{
 .support-users .unread {
   background-color: #f02020;
 }
+.background{
+  text-align: center;
+}
+.background h1{
+  font-size: 50px;
+  text-decoration: underline;
+}
+/* About team */
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+
+/*about*/
+.about p { 
+  font-family:'Times New Roman', Times, serif;
+  font-size: 1.6rem;
+  padding: 1rem 0;
+  text-align: center;
+  /* margin-right: 100px; */
+  
+  }
+  .about img{
+    width: 100%;
+
+  }
+  
+.about.col-2 {
+  float: left;
+  width: 33.33%;
+  
+ }
+.about.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.about .card {
+  box-shadow: 0 4px 8px 0 #545454;;
+  margin-right: 100px;
+  background-color: #ffffff;
+  color: #545454;
+}
+
+.about .column {
+  float: center;
+  width: 20%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+/*team*/
+
+
+.teampage .title {
+  color: #808080;
+
+}
+.teampage img{
+  width: 100%;
+}
+
+.teampage .column {
+  float: left;
+  width: 20%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+.teampage .card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+  
+}
+.teampage p { 
+
+  font-size: 1.4rem;
+  padding: 1rem 0;
+  text-align: center;
+  /* margin-right: 100px; */
+  
+  }
+
+
+
